package com.bloomtech.welcomeletter.models;

public enum Role {
    COORDINATOR,
    DATA,
    ENGINEERING
}
