@startuml

class Employee {

    - id : int
    - firstname : String
    - lastname : String
    - phonenumber : String
    - email : String
    - salary : int
    - startdate : LocalDate
    - role : Role
    - company : Company

}

class Company{
    - id: int
    - companyname : String
    - country : String

}

enum  Role{

    COORDINATOR
    DATA
    ENGINEERING

}

Employee --* Company
Employee --* Role



@enduml